--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ requests
 pyromod==1.5
 yt-dlp==2023.03.04
 ffmpeg
+Flask==1.1.2
+gunicorn==20.1.0
+Jinja2==3.0.3
+werkzeug==2.0.2
+itsdangerous==2.0.1
